apps/behemoth-api-gateway/route.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-stripprefix
  namespace: behemoth
spec:
  stripPrefix:
    prefixes:
      - /api/auth
      - /api/movies
      - /api/reviews
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: behemoth-api-gateway
  namespace: behemoth
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`behemoth-api-gateway.192.168.100.78.nip.io`) && PathPrefix(`/api/auth`)
      kind: Rule
      services:
        - name: behemoth-nodejs-auth
          port: 80
      middlewares:
        - name: api-stripprefix

    - match: Host(`behemoth-api-gateway.192.168.100.78.nip.io`) && PathPrefix(`/api/movies`)
      kind: Rule
      services:
        - name: behemoth-nodejs-catalog
          port: 80
      middlewares:
        - name: api-stripprefix

    - match: Host(`behemoth-api-gateway.192.168.100.78.nip.io`) && PathPrefix(`/api/reviews`)
      kind: Rule
      services:
        - name: behemoth-nodejs-review
          port: 80
      middlewares:
        - name: api-stripprefix
